Feb-2022/httpd-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-pod
  labels:
    env: dev
    app: web
spec:
  containers:
  - name: httpd
    image: httpd
