Feb-2022/httpd-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpd-pod2
spec:
  containers:
  - image: httpd
    name: httpd
