Feb-2022/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-deploy
  annotations:
    kubernetes.io/change-cause: "Update to v1.5.0"
  name: web-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-deploy
  strategy: {}
  template:
    metadata:
      labels:
        app: web-deploy
    spec:
      containers:
      - image: ikambarov/web-app:1.5.0
        name: web-app
