Feb-2022/vhost-ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vhost-ingress
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-service1
            port:
              number: 80
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: test-service2
            port:
              number: 80
  - host: test3.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-service3
            port:
              number: 80
  - host: testwebsite.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-service4
            port:
              number: 80
